--- a/Pickling_Lab.ipynb
+++ b/Pickling_Lab.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "61b8f0b9",
    "metadata": {},
    "source": [
     "### Import data from public source and give the dataframe a name"
@@ -10,18 +9,418 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d5a833e3",
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word_freq_make</th>\n",
+       "      <th>word_freq_address</th>\n",
+       "      <th>word_freq_all</th>\n",
+       "      <th>word_freq_3d</th>\n",
+       "      <th>word_freq_our</th>\n",
+       "      <th>word_freq_over</th>\n",
+       "      <th>word_freq_remove</th>\n",
+       "      <th>word_freq_internet</th>\n",
+       "      <th>word_freq_order</th>\n",
+       "      <th>word_freq_mail</th>\n",
+       "      <th>...</th>\n",
+       "      <th>char_freq_%3B</th>\n",
+       "      <th>char_freq_%28</th>\n",
+       "      <th>char_freq_%5B</th>\n",
+       "      <th>char_freq_%21</th>\n",
+       "      <th>char_freq_%24</th>\n",
+       "      <th>char_freq_%23</th>\n",
+       "      <th>capital_run_length_average</th>\n",
+       "      <th>capital_run_length_longest</th>\n",
+       "      <th>capital_run_length_total</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.778</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.756</td>\n",
+       "      <td>61</td>\n",
+       "      <td>278</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.132</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>0.180</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>5.114</td>\n",
+       "      <td>101</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.143</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.276</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>9.821</td>\n",
+       "      <td>485</td>\n",
+       "      <td>2259</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.537</td>\n",
+       "      <td>40</td>\n",
+       "      <td>191</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.537</td>\n",
+       "      <td>40</td>\n",
+       "      <td>191</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4596</th>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.232</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.142</td>\n",
+       "      <td>3</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4597</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.353</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.555</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4598</th>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.718</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.404</td>\n",
+       "      <td>6</td>\n",
+       "      <td>118</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4599</th>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.147</td>\n",
+       "      <td>5</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4600</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.250</td>\n",
+       "      <td>5</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4601 rows × 58 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      word_freq_make  word_freq_address  word_freq_all  word_freq_3d  \\\n",
+       "0               0.00               0.64           0.64           0.0   \n",
+       "1               0.21               0.28           0.50           0.0   \n",
+       "2               0.06               0.00           0.71           0.0   \n",
+       "3               0.00               0.00           0.00           0.0   \n",
+       "4               0.00               0.00           0.00           0.0   \n",
+       "...              ...                ...            ...           ...   \n",
+       "4596            0.31               0.00           0.62           0.0   \n",
+       "4597            0.00               0.00           0.00           0.0   \n",
+       "4598            0.30               0.00           0.30           0.0   \n",
+       "4599            0.96               0.00           0.00           0.0   \n",
+       "4600            0.00               0.00           0.65           0.0   \n",
+       "\n",
+       "      word_freq_our  word_freq_over  word_freq_remove  word_freq_internet  \\\n",
+       "0              0.32            0.00              0.00                0.00   \n",
+       "1              0.14            0.28              0.21                0.07   \n",
+       "2              1.23            0.19              0.19                0.12   \n",
+       "3              0.63            0.00              0.31                0.63   \n",
+       "4              0.63            0.00              0.31                0.63   \n",
+       "...             ...             ...               ...                 ...   \n",
+       "4596           0.00            0.31              0.00                0.00   \n",
+       "4597           0.00            0.00              0.00                0.00   \n",
+       "4598           0.00            0.00              0.00                0.00   \n",
+       "4599           0.32            0.00              0.00                0.00   \n",
+       "4600           0.00            0.00              0.00                0.00   \n",
+       "\n",
+       "      word_freq_order  word_freq_mail  ...  char_freq_%3B  char_freq_%28  \\\n",
+       "0                0.00            0.00  ...          0.000          0.000   \n",
+       "1                0.00            0.94  ...          0.000          0.132   \n",
+       "2                0.64            0.25  ...          0.010          0.143   \n",
+       "3                0.31            0.63  ...          0.000          0.137   \n",
+       "4                0.31            0.63  ...          0.000          0.135   \n",
+       "...               ...             ...  ...            ...            ...   \n",
+       "4596             0.00            0.00  ...          0.000          0.232   \n",
+       "4597             0.00            0.00  ...          0.000          0.000   \n",
+       "4598             0.00            0.00  ...          0.102          0.718   \n",
+       "4599             0.00            0.00  ...          0.000          0.057   \n",
+       "4600             0.00            0.00  ...          0.000          0.000   \n",
+       "\n",
+       "      char_freq_%5B  char_freq_%21  char_freq_%24  char_freq_%23  \\\n",
+       "0               0.0          0.778          0.000          0.000   \n",
+       "1               0.0          0.372          0.180          0.048   \n",
+       "2               0.0          0.276          0.184          0.010   \n",
+       "3               0.0          0.137          0.000          0.000   \n",
+       "4               0.0          0.135          0.000          0.000   \n",
+       "...             ...            ...            ...            ...   \n",
+       "4596            0.0          0.000          0.000          0.000   \n",
+       "4597            0.0          0.353          0.000          0.000   \n",
+       "4598            0.0          0.000          0.000          0.000   \n",
+       "4599            0.0          0.000          0.000          0.000   \n",
+       "4600            0.0          0.125          0.000          0.000   \n",
+       "\n",
+       "      capital_run_length_average  capital_run_length_longest  \\\n",
+       "0                          3.756                          61   \n",
+       "1                          5.114                         101   \n",
+       "2                          9.821                         485   \n",
+       "3                          3.537                          40   \n",
+       "4                          3.537                          40   \n",
+       "...                          ...                         ...   \n",
+       "4596                       1.142                           3   \n",
+       "4597                       1.555                           4   \n",
+       "4598                       1.404                           6   \n",
+       "4599                       1.147                           5   \n",
+       "4600                       1.250                           5   \n",
+       "\n",
+       "      capital_run_length_total  class  \n",
+       "0                          278      1  \n",
+       "1                         1028      1  \n",
+       "2                         2259      1  \n",
+       "3                          191      1  \n",
+       "4                          191      1  \n",
+       "...                        ...    ...  \n",
+       "4596                        88      0  \n",
+       "4597                        14      0  \n",
+       "4598                       118      0  \n",
+       "4599                        78      0  \n",
+       "4600                        40      0  \n",
+       "\n",
+       "[4601 rows x 58 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('https://www.openml.org/data/get_csv/44')"
+    "df = pd.read_csv('https://www.openml.org/data/get_csv/44')\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c00f5b33",
    "metadata": {},
    "source": [
     "### Import necessary modules"
@@ -29,8 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8c0aa7f3",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +443,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d59d1b98",
    "metadata": {},
    "source": [
     "### Create pipeline"
@@ -53,23 +450,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "07583b84",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.92"
+       "0.9044309296264118"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X, y = make_classification(random_state=0)\n",
+    "#X, y = make_classification(random_state=0)\n",
+    "X = df.iloc[:,:-1]\n",
+    "y = df[\"class\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
     "                                                    random_state=0)\n",
     "pipe = Pipeline([('scaler', StandardScaler()), ('svc', LogisticRegression())])\n",
@@ -81,7 +479,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8550c7",
    "metadata": {},
    "source": [
     "### Import pickle module and pickle the model"
@@ -90,18 +487,25 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "35699f84",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "\n",
+    "#pickles data\n",
     "with open('df.pickle', 'wb') as f:\n",
     "    pickle.dump(df, f, pickle.HIGHEST_PROTOCOL)\n",
-    "    \n",
+    "\n",
+    "#pickles pipeline\n",
     "filename = 'model.pkl'\n",
     "pickle.dump(pipe, open(filename, 'wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -120,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
